# vec-rec

./: .gitignore  AGENTS.md  BENCHMARK_GENERATION.md  CLAUDE.md  Makefile  example_benchmark.py  pyproject.toml
benchmarks/arith/: OTHER-BENCHMARKS.md  audio-large-filters-factorized.py  audio-large-filters.py  box-filter-summed-area-table.py  continued-fraction.py  first-order-high-pass.py  first-order-ti.py  higher-order-non-uniform-filter.py  kalman-filter.py  prefix-sum.py  repeated-box-filter.py  second-order-high-pass.py  second-order-ti.py
compiler/: diff_perf.py  main.py  pyproject.toml  template.cpp
compiler2/: codegen.py  expr.py  factorize.py  main.py  pyproject.toml  semantics.py  transform.py
compiler2/templates/: common.h  kernel_ops.cpp
impls/: so-iir-tropical.cpp  so-iir.cpp
src/vecrec/: __init__.py  codegen.py  expr.py  factorize.py  semantics.py  transform.py  util.py
src/vecrec/expr/: __init__.py  base.py  kernel.py  kernel_ops.py  pretty.py  signal.py  signal_ops.py
src/vecrec/templates/: common.h  kernel_ops.cpp
templates/: kernel_ops.cpp
tests/: test_convolve2d.py  test_element_types.py  test_factorize.py  test_generate_and_run.py  test_int_types.py  test_repeater_lane_mismatch.py  test_tropical.py
