[project]
name = "vecrec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yihong Zhang", email = "yz489@cs.washington.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "mypy>=1.19.0",
    "numpy>=2.2.6",
    "pytest>=9.0.1",
]

[project.scripts]
vecrec = "vecrec:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
