[project]
name = "compiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "mypy>=1.18.1",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.0",
    "scipy-stubs>=1.16.2.0",
    "sympy>=1.14.0",
]
